small code cleanup